--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Pr0gr3ss.GitHub.io by Pr0gr3ss</title>
+    <title>Welcome to the Pr0gr3ss Webpage</title>
   </head>
 
   <body>
